Fixed color of grab it button on IE

--- a/public/client/snakkle/css/sayso-onboard.css
+++ b/public/client/snakkle/css/sayso-onboard.css
@@ -342,12 +342,12 @@ html {
 	position: relative;
 	border: none;
 
+background-color: #3AA1D5;
 background-image: linear-gradient(bottom, rgb(13,150,209) 0%, rgb(58,161,213) 50%, rgb(141,196,226) 75%);
 background-image: -o-linear-gradient(bottom, rgb(13,150,209) 0%, rgb(58,161,213) 50%, rgb(141,196,226) 75%);
 background-image: -moz-linear-gradient(bottom, rgb(13,150,209) 0%, rgb(58,161,213) 50%, rgb(141,196,226) 75%);
 background-image: -webkit-linear-gradient(bottom, rgb(13,150,209) 0%, rgb(58,161,213) 50%, rgb(141,196,226) 75%);
 background-image: -ms-linear-gradient(bottom, rgb(13,150,209) 0%, rgb(58,161,213) 50%, rgb(141,196,226) 75%);
-
 
 
 
@@ -365,6 +365,7 @@ background-image: -ms-linear-gradient(bottom, rgb(13,150,209) 0%, rgb(58,161,213
 	font-size: 12px;
 	position: relative;
 	border: thin solid #d4d5d7;
+	background-color: #B7B7B7;
 	background-image: linear-gradient(bottom, rgb(168,168,168) 0%, rgb(183,183,183) 50%, rgb(236,236,236) 75%);
 background-image: -o-linear-gradient(bottom, rgb(168,168,168) 0%, rgb(183,183,183) 50%, rgb(236,236,236) 75%);
 background-image: -moz-linear-gradient(bottom, rgb(168,168,168) 0%, rgb(183,183,183) 50%, rgb(236,236,236) 75%);
